[package]
name = "dresscode"
version = "0.1.0"
authors = ["wataru morita"]
edition = "2018"
description = "Dress Up stdin"
licence = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = ["stdin", "log"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
atty = "0.2.13"
itertools = "0.8.0"
termcolor = "1.0.5"
