[package]
name = "dresscode"
version = "0.1.0"
authors = ["wataru morita <wataruscript8611@gmail.com>"]
edition = "2018"
description = "Dress Up stdin"
licence = "MIT"
license-file = "LICENSE"
readme = "README.md"
keywords = ["stdin", "log"]

[dependencies]
clap = "2.33.0"
atty = "0.2.13"
itertools = "0.8.0"
termcolor = "1.0.5"
